--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "project-bookshelf",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://NazarMural.github.io/project-bookshelf",
+  "homepage": "https://GoitStudentsWorks.github.io/js_75_NazarMural",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /project-bookshelf/"
+    "build": "parcel build src/*.html --public-url /js_75_NazarMural/"
   },
   "repository": {
     "type": "git",
